Fix power-on hours localization

--- a/languages/english.lang
+++ b/languages/english.lang
@@ -115,8 +115,10 @@
         "could_not_load_full_log": "Could not load full log",
         "could_not_load_log": "Could not load log file",
         "time_years": "Years",
+        "time_months": "Months",
         "time_days": "Days",
         "time_hours": "Hours",
+        "time_total_hours": "total hours",
         "no_log_data_24h": "No log data for the last 24 hours",
         "no_log_data_week": "No log data for the last 7 days",
         "no_log_data_month": "No log data for the last 30 days",
