--- a/languages/norwegian.lang
+++ b/languages/norwegian.lang
@@ -115,8 +115,10 @@
         "could_not_load_full_log": "Kunne ikke laste fullstendig logg",
         "could_not_load_log": "Kunne ikke laste loggfil",
         "time_years": "År",
+        "time_months": "Måneder",
         "time_days": "Dager",
         "time_hours": "Timer",
+        "time_total_hours": "timer totalt",
         "no_log_data_24h": "Ingen loggdata for de siste 24 timer",
         "no_log_data_week": "Ingen loggdata for de siste 7 dager",
         "no_log_data_month": "Ingen loggdata for de siste 30 dager",
