--- a/languages/template.lang
+++ b/languages/template.lang
@@ -136,6 +136,11 @@
         "tooltip_temperature": "",
         "tooltip_total_bytes_written": "",
         "tooltip_uncorrectable_errors": "",
+        "time_years": "",
+        "time_months": "",
+        "time_days": "",
+        "time_hours": "",
+        "time_total_hours": "",
         "total_bytes_written": "",
         "unassessable": "",
         "unassessable_smart_data": "",
