--- a/languages/english.lang
+++ b/languages/english.lang
@@ -92,6 +92,11 @@
         "ok": "OK",
         "warning": "Warning",
         "critical": "Critical",
+        "excellent": "Excellent",
+        "good": "Good",
+        "acceptable": "Acceptable",
+        "poor": "Poor",
+        "unknown": "Unknown",
         "ghost": "Ghost Drive",
         "language_refresh_hint": "Some elements require a hard refresh (Ctrl+Shift+R/Ctrl+F5) to update",
         "usb_smart_warning": "USB: SMART data may be unreliable - use internal connection for accurate readings",
