--- a/languages/norwegian.lang
+++ b/languages/norwegian.lang
@@ -92,6 +92,11 @@
         "ok": "OK",
         "warning": "Advarsel",
         "critical": "Kritisk",
+        "excellent": "Utmerket",
+        "good": "God",
+        "acceptable": "Akseptabel",
+        "poor": "Dårlig",
+        "unknown": "Ukjent",
         "ghost": "Ghost Drive",
         "language_refresh_hint": "Noen elementer krever en hard refresh (Ctrl+Shift+R/Ctrl+F5) for å oppdateres",
         "usb_smart_warning": "USB: SMART-data kan være upålitelig - bruk intern tilkobling for nøyaktig avlesning",
